fix: prevent bio from overflowing off of page

--- a/src/profile/components/ProfilePage/style.less
+++ b/src/profile/components/ProfilePage/style.less
@@ -49,4 +49,8 @@
     font-size: @general-body;
     margin-top: 24px;
   }
+
+  .bio > p {
+    overflow-wrap: anywhere;
+  }
 }
